--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.1.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from service -->
 	</parent>
-	<groupId>com.mytrainst.train</groupId>
+	<groupId>com.mytransit.train</groupId>
 	<artifactId>mytransit</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>mytransit</name>
@@ -38,6 +38,11 @@
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
+			<version>3.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-spring-webmvc</artifactId>
 			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
 
